--- a/src/sass/pages/_saga.scss
+++ b/src/sass/pages/_saga.scss
@@ -83,6 +83,10 @@
         }
     }
     @include forTablet {
+        &_infos {
+            height: auto;
+            overflow: inherit;
+        }
         &_parts {
             &_tabs {
                 width: 90%;
